--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ annotated-types==0.7.0
 anyio==4.12.0
 attrs==25.4.0
 autopep8==2.3.2
+bcrypt==4.0.1
 blinker==1.9.0
 cachetools==6.2.3
 certifi==2025.11.12
@@ -24,6 +25,7 @@ narwhals==2.13.0
 numpy==2.2.6
 packaging==25.0
 pandas==2.3.3
+passlib==1.7.4
 pillow==12.0.0
 protobuf==6.33.2
 psycopg2-binary==2.9.11
