--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cachetools==6.2.3
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+dotenv==0.9.9
 exceptiongroup==1.3.1
 fastapi==0.124.4
 gitdb==4.0.12
@@ -35,6 +36,7 @@ pydantic==2.12.5
 pydantic_core==2.41.5
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 qrcode==8.2
 referencing==0.37.0
@@ -55,5 +57,3 @@ tzdata==2025.3
 urllib3==2.6.2
 uvicorn==0.38.0
 watchdog==6.0.0
-
-
