--- a/requirements.txt
+++ b/requirements.txt
@@ -8,15 +8,19 @@ bcrypt==4.0.1
 blinker==1.9.0
 cachetools==6.2.3
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.1
+cryptography==46.0.3
 dotenv==0.9.9
+ecdsa==0.19.1
 exceptiongroup==1.3.1
 fastapi==0.124.4
 gitdb==4.0.12
 GitPython==3.1.45
 greenlet==3.3.0
 h11==0.16.0
+httptools==0.7.1
 idna==3.11
 Jinja2==3.1.6
 jsonschema==4.25.1
@@ -31,17 +35,22 @@ pillow==12.0.0
 protobuf==6.33.2
 psycopg2-binary==2.9.11
 pyarrow==22.0.0
+pyasn1==0.6.1
 pycodestyle==2.14.0
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
 pydeck==0.9.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-jose==3.5.0
 pytz==2025.2
+PyYAML==6.0.3
 qrcode==8.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.30.0
+rsa==4.9.1
 six==1.17.0
 smmap==5.0.2
 SQLAlchemy==2.0.45
@@ -56,4 +65,7 @@ typing_extensions==4.15.0
 tzdata==2025.3
 urllib3==2.6.2
 uvicorn==0.38.0
+uvloop==0.22.1
 watchdog==6.0.0
+watchfiles==1.1.1
+websockets==15.0.1
