--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cryptography==46.0.3
 dotenv==0.9.9
 ecdsa==0.19.1
 exceptiongroup==1.3.1
+extra-streamlit-components==0.1.81
 fastapi==0.124.4
 gitdb==4.0.12
 GitPython==3.1.45
